--- a/app/templates/tab5.html
+++ b/app/templates/tab5.html
@@ -309,11 +309,11 @@ function printContract(contract) {
         </style>
       </head>
       <body>
-        <h1>Laundry Contract: ${contract}</h1>
+        <h1>RFID-Laundry Out: ${contract}</h1>
         <table>
           <thead>
             <tr>
-              <th>Common Name</th>
+              <th>Item Name</th>
               <th>Total Items</th>
             </tr>
           </thead>
