Style Tab 2: Rugged flair, parent data in middle, dual prints

--- a/app/templates/tab1.html
+++ b/app/templates/tab1.html
@@ -5,10 +5,10 @@
 
 <div class="mb-3 row g-2">
   <div class="col-12 col-md-2">
-    <input type="text" class="table-filter form-control" data-filter="contract_num" placeholder="Filter Contract Number" />
+    <input type="text" class="table-filter form-control" data-filter="contract_num" placeholder="Filter Contract" />
   </div>
   <div class="col-12 col-md-2">
-    <input type="text" class="table-filter form-control" data-filter="common_name" placeholder="Filter Common Name" />
+    <input type="text" class="table-filter form-control" data-filter="common_name" placeholder="Filter Name" />
   </div>
 </div>
 
