Fix Tab 2: Subcat print logic, correct totals

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 <p style="text-align: center;"><strong>Welcome to the RFID Inventory Testing Dashboard. </strong></p>
 <p style="text-align: center;">Use the tabs above to view detailed information, or click "WARNING SERVER REBOOT" to update data immediately.</p>
 <p style="text-align: center;">THIS SERVER WILL HAVE NEWEST FEATURES.</p>
-<h3 style="padding-left: 240px;"><strong>Scanable Items- </strong></h3>
+<h3 style="padding-left: 240px;"><strong>Scannable Items- </strong></h3>
 <ul>
 <li style="list-style-type: none;">
 <ul>
